Fix icon alignment in post-listings, add padding to post score

--- a/ui/src/custom.css
+++ b/ui/src/custom.css
@@ -538,3 +538,18 @@ a.text-body {
 .badge-pink {
   background-color: #DA1B9A !important;
 }
+
+.inline-vote-count {
+  display: inline-flex;
+  align-items: center;
+}
+
+.post-listing-details {
+  display: flex;
+  align-items: center;
+  height: 26px;
+}
+
+.inline-vote-details {
+  margin-top: -2px;
+}
